--- a/config.env
+++ b/config.env
@@ -2,7 +2,7 @@ API_ID=12132011
 API_HASH=96c5baf51fa3a81fc67a34c6981462db
 
 #If the bot is intended for public use, keep the chat ID as 0. Otherwise, add the name of the chat ID to the list.
-AUTHORIZED_CHATS=[-1001659338688]
+AUTHORIZED_CHATS=[0]
 
 #Add sudo/owner userids.
 SUDO_USERID= []
