--- a/config.env
+++ b/config.env
@@ -1,6 +1,5 @@
-API_ID=12132011                                  
-API_HASH=96c5baf51fa3a81fc67a34c6981462db
-
+API_ID=                                  
+API_HASH=
 #If the bot is intended for public use, keep the chat ID as 0. Otherwise, add the name of the chat ID to the list.
 AUTHORIZED_CHATS=[0]
 
@@ -8,4 +7,4 @@ AUTHORIZED_CHATS=[0]
 SUDO_USERID= []
 
 #Add Bot Token from botfather.
-BOT_TOKEN=6614308515:AAHtHajuywfpE9RjcwTFo_PAggvzT-CCAnc
+BOT_TOKEN=
